--- a/style.css
+++ b/style.css
@@ -1,18 +1,37 @@
 
-body{
+:root {
+  font-family: "Alice", serif;
+  line-height: 150%; /*Espaçamento entre cada frase com a proxima linha*/
+  color: #573A37;
+}
+
+body {
   background-image: url(assets/bg.jpg);
   background-size: cover; /*vai cobrir a imagem todo o bady*/
 }
 
-#page{
-  box-sizing: border-box;
+#page {
+  box-sizing: border-box; /*Remove o espaços da borda da imagem*/
   width: 800px;
   padding: 24px;
   background-color: #F0E8C2;
   border-radius: 24px;
-  margin: 48px auto;
+  margin: 48px auto; /*48px em cima e em baixo e auto para laterais*/
 }
 
 img {
   border-radius: 16px;
+}
+
+h1 {
+  line-height: 140%; /*Espaçamento entre cada frase com a proxima linha*/
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h1, h2 {
+  color: #291B1A;
 }
